# sonarplusd

./: .gitignore  CMakeLists.txt  README.md  WORKSHOP_GUIDE.html  WORKSHOP_GUIDE.md
app/: CMakeLists.txt  sensehat_if.py  sensehat_led_control.py  sensor_data.cpp  sensor_data.hpp
res/: uv4l-raspicam.conf  uv4l-raspicam.conf.original
server/: package-lock.json  package.json  server.js
server/httpresponses/: 404.html
server/public_html/: index.html
server/public_html/scripts/: client.js  signalling.js
server/public_html/styles/: fonts.css  sonard_cubesat.css
utils/: ap_disable.sh  ap_enable.sh  apt_install_pkg.sh  npm_install_pkg.sh  test_camera.sh  test_imu_acceleration.py  test_imu_magnetometer.py  test_imu_orientation.py  test_sense_hat.py  update_nodejs.sh
utils/systemd/: ledmatrix.service  telemetry.service
